# NETSIM

./: CMakeLists.txt  Sieć - Skład grup i repozytorium.txt
NETSIM-main/: CMakeLists.txt  README.md
NETSIM-main/Przydział zadań/: Półprodukty i ich przechowanie - przydział.txt
NETSIM-main/include/: nodes.hpp  package.hpp  storage_types.hpp
NETSIM-main/src/: factory.cpp  package.cpp
Przydział zadań/: IO + Raporty + Symulacja - przydział.txt  Węzły sieci + Fabryka - przydział zadań.txt
include/: factory.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
